Improved Sponsorship Page. Added scroll animation for sponsorship tree. Changed "overflow: hidden" in some css attributes to "overflow: clip" to fix some glitches occurring to the scroll animation. Added SponsorMarquee and WhySponsorBento components

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,7 +19,7 @@
 }
 .App{
   width: 100%;
-  overflow: hidden;
+  overflow: clip;
   /* display: flex;
   align-items: center;
   justify-content: center;
