--- a/client/src/screens/Sponsors/Sponsorship.css
+++ b/client/src/screens/Sponsors/Sponsorship.css
@@ -50,7 +50,7 @@
     /* left: 0; */
     /* transform: translateX(-50%); */
     z-index: 0;
-    overflow: hidden;
+    overflow: clip;
 }
 .sponsor .section-1 .side-img img {
     width: 100%;
